objects/TRIMDA__TRIMDA_DupeAlerts__c.object
<CustomObject>
    <description>DataTrim Dupe Alerts are configuration settings for the individual matching process. 
Here you define What, When and How</description>
    <fields>
        <fullName>TRIMDA__ADVConfiguration__c</fullName>
        <description>Custom field for Advanced and custom setting</description>
        <inlineHelpText>Advanced and Custom Setting, -is only to be used for Custom Matching Processes, where you have specific instructions from DataTrim.</inlineHelpText>
        <label>Advanced Parameters</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Activate/De-Activate this Alert</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Alert_Status__c</fullName>
        <formula>IF( TRIMDA__Active__c  = false, &quot;Alert is not Active&quot;, 
CASE( TRIMDA__Run_Frequency__c ,&quot;Once&quot;,
IF( TRIMDA__Last_Run_Date__c &gt; TODAY(),&quot;Not Scheduled, Reference for New and changed Records must be in the Past&quot;,
CASE( TRIMDA__TimeSlot__c ,&quot;Next&quot;,IF(  ISPICKVAL(TRIMDA__Run_Status__c,&apos;Running, Please Wait...&apos; ),&quot;Running&quot;,&quot;Alert is scheduled to run in Next timeslot&quot;),&quot;Alert is scheduled to run based on Timeslot setting&quot;)), &quot;Recuring Alert Active and Scheduled &quot; ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alert Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Dupe_Alert_Type__c</fullName>
        <description>Alert Type defines which data are being matched</description>
        <label>Dupe Alert Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TRIMDA__MasterEqualsSecondary__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Account-Account</fullName>
                </value>
                <value>
                    <fullName>Acc+Contact-Acc+Contact</fullName>
                </value>
                <value>
                    <fullName>Contact-Contact</fullName>
                </value>
                <value>
                    <fullName>Lead-Lead</fullName>
                </value>
                <value>
                    <fullName>Lead-Account</fullName>
                </value>
                <value>
                    <fullName>Lead-Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TRIMDA__FilterMaster__c</fullName>
        <description>Filter statement excluding the  &quot;WHERE&quot; e.g. &quot;BillingCountry = &apos;United Kingdom&apos; and Phone &lt;&gt; &apos;&apos;&quot; or &quot;Region__c = &apos;EMEA&apos;&quot; or &quot;LastModifiedDate = LAST_N_DAYS:15&quot; or &quot;LastModifiedDate = LAST_90_DAYS&quot;</description>
        <inlineHelpText>Leave Blank to match against ALL records.
Filter statement excluding the  &quot;WHERE&quot; e.g. &quot;BillingCountry = &apos;United Kingdom&apos; and Phone &lt;&gt; &apos;&apos;&quot; or &quot;Region__c = &apos;EMEA&apos;&quot; or &quot;LastModifiedDate = LAST_N_DAYS:15&quot; or &quot;LastModifiedDate = LAST_90_DAYS&quot;</inlineHelpText>
        <label>Filter: Master Data Set</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRIMDA__FilterSecondary__c</fullName>
        <description>Filter statement excluding the  &quot;WHERE&quot; e.g. &quot;BillingCountry = &apos;United Kingdom&apos; and Phone &lt;&gt; &apos;&apos;&quot; or &quot;Region__c = &apos;EMEA&apos;&quot; or &quot;LastModifiedDate = LAST_N_DAYS:15&quot; or &quot;LastModifiedDate = LAST_90_DAYS&quot;</description>
        <inlineHelpText>Filter statement excluding the  &quot;WHERE&quot; e.g. &quot;BillingCountry = &apos;United Kingdom&apos; and Phone &lt;&gt; &apos;&apos;&quot; or &quot;Region__c = &apos;EMEA&apos;&quot; or &quot;LastModifiedDate = LAST_N_DAYS:15&quot; or &quot;LastModifiedDate = LAST_90_DAYS&quot;</inlineHelpText>
        <label>Filter: Secondary Data Set</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Last_Run_Date__c</fullName>
        <defaultValue>Today()-7</defaultValue>
        <description>Date from which the dataset &apos;New and changed data&apos; is retrieved</description>
        <label>Include New and Changed data since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Last_Run_Result__c</fullName>
        <label>Last Run Result</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TRIMDA__LicenseNo__c</fullName>
        <defaultValue>&quot;000000000000000000&quot;</defaultValue>
        <description>License number, Default number &quot;000000000000000000&quot; is for Trial license, which limits the number of records to be matched</description>
        <label>License No</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__License_Type__c</fullName>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Trial</fullName>
                    <default>true</default>
                    <label>Trial</label>
                </value>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TRIMDA__MasterEqualsSecondary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Run deduplication on secondary dataset only</inlineHelpText>
        <label>Master = Secondary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Match_Binding__c</fullName>
        <description>Exact = 100% Match
SuperTight 99-100% match
Tight = 97-100% match
Medium = 95-100% match
Loose = 93-100% match</description>
        <label>Match Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exact</fullName>
                </value>
                <value>
                    <fullName>SuperTight</fullName>
                    <default>true</default>
                    <label>SuperTight</label>
                </value>
                <value>
                    <fullName>Tight</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Loose</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TRIMDA__Match_Custom_Code__c</fullName>
        <description>Optional field, containing coded information for Custom users. Normally this field should be blank, unless otherwise instructed by d2b International ApS</description>
        <label>Match Custom Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__ReviewField1__c</fullName>
        <description>Name of additional field which will be added to the review page layout</description>
        <inlineHelpText>The contents of this field will be displayed on the review screen, for Lead-Contact and Leac-Account Alerts, remember to select the corresponding Lead field in the ReviewField (Lead) field</inlineHelpText>
        <label>Add. Review Field</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TRIMDA__Dupe_Alert_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>a.Site</fullName>
                </value>
                <value>
                    <fullName>a.BillingState</fullName>
                </value>
                <value>
                    <fullName>a.Rating</fullName>
                </value>
                <value>
                    <fullName>a.Type</fullName>
                </value>
                <value>
                    <fullName>a.RecordTypeId</fullName>
                </value>
                <value>
                    <fullName>c.Email</fullName>
                </value>
                <value>
                    <fullName>c.LeadSource</fullName>
                </value>
                <value>
                    <fullName>c.MailingState</fullName>
                </value>
                <value>
                    <fullName>l.Email</fullName>
                </value>
                <value>
                    <fullName>l.LeadSource</fullName>
                </value>
                <value>
                    <fullName>l.Rating</fullName>
                </value>
                <value>
                    <fullName>l.State</fullName>
                </value>
                <value>
                    <fullName>l.Status</fullName>
                </value>
                <value>
                    <fullName>l.RecordTypeId</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TRIMDA__ReviewFieldX__c</fullName>
        <description>List fo fields to use for review. Add to the list using the l., c. and a. prefix to indicate table reference (l.=lead, c.=Contact, a.=Account). Also remember to update the field dependency rules</description>
        <inlineHelpText>For Lead-Contact and Leac-Account Alerts he contents of this field will be displayed on the review screen</inlineHelpText>
        <label>Add. Review Field (Lead)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TRIMDA__Dupe_Alert_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>a.AccountNumber</fullName>
                </value>
                <value>
                    <fullName>a.BillingState</fullName>
                </value>
                <value>
                    <fullName>a.Ownership</fullName>
                </value>
                <value>
                    <fullName>a.Rating</fullName>
                </value>
                <value>
                    <fullName>a.Type</fullName>
                </value>
                <value>
                    <fullName>c.Email</fullName>
                </value>
                <value>
                    <fullName>c.LeadSource</fullName>
                </value>
                <value>
                    <fullName>c.MailingState</fullName>
                </value>
                <value>
                    <fullName>l.Email</fullName>
                </value>
                <value>
                    <fullName>l.LeadSource</fullName>
                </value>
                <value>
                    <fullName>l.Rating</fullName>
                </value>
                <value>
                    <fullName>l.State</fullName>
                </value>
                <value>
                    <fullName>l.Status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TRIMDA__Run_Frequency__c</fullName>
        <label>Run</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TRIMDA__License_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Once</fullName>
                    <default>true</default>
                    <label>Once</label>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Every Sunday</fullName>
                </value>
                <value>
                    <fullName>Every Monday</fullName>
                </value>
                <value>
                    <fullName>Every Tuesday</fullName>
                </value>
                <value>
                    <fullName>Every Wednesday</fullName>
                </value>
                <value>
                    <fullName>Every Thursday</fullName>
                </value>
                <value>
                    <fullName>Every Friday</fullName>
                </value>
                <value>
                    <fullName>Every Saturday</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TRIMDA__Run_Status__c</fullName>
        <description>This field is being used by the DataTrim Matching process to report progress back on an active matching.</description>
        <inlineHelpText>This field is being used by the DataTrim Matching process to report progress back on an active matching.</inlineHelpText>
        <label>Run Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready</fullName>
                    <default>true</default>
                    <label>Ready</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TRIMDA__Survivorship_Rule__c</fullName>
        <label>Survivorship Rule</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TRIMDA__Dupe_Alert_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Oldest Record Survives</fullName>
                    <default>true</default>
                    <label>Oldest Record Survives</label>
                </value>
                <value>
                    <fullName>Most Recent Record Survives</fullName>
                </value>
                <value>
                    <fullName>Most Recently Updated Record Survives</fullName>
                </value>
                <value>
                    <fullName>Record with Most Recently Activity Survives</fullName>
                </value>
                <value>
                    <fullName>Record from Secondary Data Set Survives</fullName>
                </value>
                <value>
                    <fullName>Record from Master Data Set Survives</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TRIMDA__TimeSlot__c</fullName>
        <description>EMEA: 00:00-06:00 / 10pm-6am GMT
Americas: 12am-6am Pacific Standard Time (GMT-8)
APAC: 12am-6am China Standard Time, Shanghai (GMT+8)</description>
        <inlineHelpText>EMEA: 0:00-06:00 / 10pm-6am GMT
Americas: 12am-6am Pacific Standard Time (GMT-8)
APAC: 12am-6am China Standard Time, Shanghai (GMT+8)</inlineHelpText>
        <label>When (Time Slot)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Next</fullName>
                    <default>true</default>
                    <label>Next</label>
                </value>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TRIMDA__UseSocialCRM__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable to perform matching on Facebook, twitter, LinkedIn and Google+ references</description>
        <inlineHelpText>Enable to perform matching on Facebook, twitter, LinkedIn and Google+ references</inlineHelpText>
        <label>Use Social CRM</label>
        <type>Checkbox</type>
    </fields>
    <label>DataTrim Dupe Alert</label>
    <listViews>
        <fullName>TRIMDA__All</fullName>
        <columns>NAME</columns>
        <columns>TRIMDA__Active__c</columns>
        <columns>TRIMDA__Dupe_Alert_Type__c</columns>
        <columns>TRIMDA__Run_Frequency__c</columns>
        <columns>TRIMDA__Match_Binding__c</columns>
        <columns>TRIMDA__UseSocialCRM__c</columns>
        <columns>TRIMDA__Last_Run_Result__c</columns>
        <columns>TRIMDA__Run_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>TRIMDA__AllActive</fullName>
        <columns>NAME</columns>
        <columns>TRIMDA__Active__c</columns>
        <columns>TRIMDA__Dupe_Alert_Type__c</columns>
        <columns>TRIMDA__Run_Frequency__c</columns>
        <columns>TRIMDA__Match_Binding__c</columns>
        <columns>TRIMDA__Last_Run_Date__c</columns>
        <columns>TRIMDA__Last_Run_Result__c</columns>
        <columns>TRIMDA__Run_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TRIMDA__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active</label>
    </listViews>
    <listViews>
        <fullName>TRIMDA__AllStandard</fullName>
        <columns>NAME</columns>
        <columns>TRIMDA__Active__c</columns>
        <columns>TRIMDA__Dupe_Alert_Type__c</columns>
        <columns>TRIMDA__Run_Frequency__c</columns>
        <columns>TRIMDA__Match_Binding__c</columns>
        <columns>TRIMDA__Last_Run_Date__c</columns>
        <columns>TRIMDA__Last_Run_Result__c</columns>
        <columns>TRIMDA__Run_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TRIMDA__Dupe_Alert_Type__c</field>
            <operation>equals</operation>
            <value>Account-Account,Contact-Contact,Lead-Account,Lead-Contact,Lead-Lead</value>
        </filters>
        <filters>
            <field>TRIMDA__Run_Frequency__c</field>
            <operation>equals</operation>
            <value>Once</value>
        </filters>
        <label>All Standard</label>
    </listViews>
    <listViews>
        <fullName>TRIMDA__All_Scheduled</fullName>
        <columns>NAME</columns>
        <columns>TRIMDA__Active__c</columns>
        <columns>TRIMDA__Dupe_Alert_Type__c</columns>
        <columns>TRIMDA__Run_Frequency__c</columns>
        <columns>TRIMDA__Match_Binding__c</columns>
        <columns>TRIMDA__Last_Run_Date__c</columns>
        <columns>TRIMDA__Last_Run_Result__c</columns>
        <columns>TRIMDA__Run_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TRIMDA__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TRIMDA__Run_Frequency__c</field>
            <operation>notEqual</operation>
            <value>Once</value>
        </filters>
        <label>All Scheduled</label>
    </listViews>
    <nameField>
        <label>Dupe Alert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DataTrim Dupe Alert</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>TRIMDA__Invalid_License_Number</fullName>
        <active>true</active>
        <errorConditionFormula>OR(  TRIMDA__LicenseNo__c  = &quot;000000000000000000&quot;, LEN(TRIMDA__LicenseNo__c ) &lt; 18 )</errorConditionFormula>
        <errorDisplayField>TRIMDA__LicenseNo__c</errorDisplayField>
        <errorMessage>Invalid License Number, enter your License number, or contact Datatrim to get registered (http://www.datatrim.com)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRIMDA__License_Type_Validation</fullName>
        <active>true</active>
        <description>Validates the License type correspondence with the License No</description>
        <errorConditionFormula>CASE(TRIMDA__License_Type__c,
&quot;Trial&quot;, IF(LEFT(TRIMDA__LicenseNo__c,2)=&quot;00&quot;,1,0),
&quot;Basic&quot;, IF(LEFT(TRIMDA__LicenseNo__c,2)=&quot;33&quot;,1,0),
&quot;Standard&quot;, IF(LEFT(TRIMDA__LicenseNo__c,2)=&quot;11&quot;,1,0),
&quot;Enterprise&quot;, IF(LEFT(TRIMDA__LicenseNo__c,2)=&quot;22&quot;,1,0),
&quot;Custom&quot;, IF(LEFT(TRIMDA__LicenseNo__c,2)=&quot;99&quot;,1,0),
0
)=0</errorConditionFormula>
        <errorDisplayField>TRIMDA__License_Type__c</errorDisplayField>
        <errorMessage>This License Type value is not allowed for the current License, Contact d2b International to upgrade your license.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRIMDA__Master_equalsSecondary_not_valid</fullName>
        <active>true</active>
        <description>Master=Secondary not valid for Lead to Account and lead to contact deduplications</description>
        <errorConditionFormula>AND( OR( ISPICKVAL( TRIMDA__Dupe_Alert_Type__c , &quot;Lead-Account&quot;) ,
ISPICKVAL( TRIMDA__Dupe_Alert_Type__c , &quot;Lead-Contact&quot;)) , TRIMDA__MasterEqualsSecondary__c = true)</errorConditionFormula>
        <errorDisplayField>TRIMDA__MasterEqualsSecondary__c</errorDisplayField>
        <errorMessage>You cannot select the Master=Secondary check box for Lead-Account or Lead-Contact deduplications. For these Alert Types the Leads are the secondary data and the Account/Contact are the Master data</errorMessage>
    </validationRules>
</CustomObject>